more presentation updates
prezi work

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
 <head>
-	<title>Intro to QGIS: Make a Map</title>
+	<title>Design to Data: AI Data Extraction</title>
 	<link target="_blank" href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
 	<style>
@@ -116,7 +116,7 @@
 <div class="slide image_full">
 	<img src="images/chugiak_alaska1.png"/>
 	<p class="title">Design to Data<br>
-	<a>A Python Tool for<br>Adobe Illustrator</a></p>
+	<a>Adobe Illustrator<br>Data Extraction</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
@@ -132,9 +132,9 @@
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
-<div class="slide image_bottom">
-	<p>Mike Foster, GISP<br>
-	MIT<br>Follow The Slides<br><a target="_blank" href="http://www.github.com/mjfoster83">www.github.com</a></p>
+<div class="slide image_full">
+	<p>Hello!<br>Mike Foster, GISP<br><em>GIS/Data Viz Specialist</em><br>DUSPMIT<br>
+	<a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>Follow Along:<br><a target="_blank" href="http://www.github.com/mjfoster83">mjfoster83.github.io/ai-parser</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
@@ -144,28 +144,32 @@
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
-<div class="slide">
-	<p class="title">An Open Source Python Tool for Illustrator to convert vectors into Shapefiles</p>
+<div class="slide image_full">
+	<img src="images/bridge.jpg"/>
+	<p class="title">The Project</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
+	<p class="title">Exploring Interoperability between Graphics Software and GIS Software</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide">
+	<p class="title">Methods of Interoperability</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_bottom">
+	<img src="images/mapublisher.jpg"/>
+	<p class="title">Mapublisher<br>AutoCAD<br>Georeferencing</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_full">
+	<img src="images/dead_end_large.gif"/>
 	<p class="title">The Background...<br>
 	and Motivation</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide">
-	<p class="title">Methods of Converting Nonspatial Data<br>
-	Mapublisher<br>
-	AutoCAD<br>
-	Georeferencing<br>
-	Others...</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide">
-	<p class="title">The Project</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
@@ -177,14 +181,27 @@
 </div>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">The Result...<br><br>
+	<a>Python Based</a> Data Extraction/<br>Conversion Tool</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_full">
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">The Process...</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_full">
+	<img src="images/calhoun_1.jpg"/>
 	<p class="title">What is in an AI file?</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
-	<p class="title">Postscript</p>
+	<p class="title"><a>Glorified</a><br>Postscript</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
