--- a/presentation/index.html
+++ b/presentation/index.html
@@ -133,7 +133,7 @@
 </div>
 
 <div class="slide image_full">
-	<p>Hello!<br>Mike Foster, GISP<br><em>GIS/Data Viz Specialist</em><br>DUSPMIT<br>
+	<p>Hi!<br>Mike Foster, GISP<br><em>GIS/Data Viz Specialist</em><br>DUSPMIT/FHGeographics<br>
 	<a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>Follow Along:<br><a target="_blank" href="http://www.github.com/mjfoster83">mjfoster83.github.io/ai-parser</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
@@ -194,7 +194,7 @@
 </div>
 
 <div class="slide image_full">
-	<img src="images/calhoun_1.jpg"/>
+	<img src="images/ai_screeny.png"/>
 	<p class="title">What is in an AI file?</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
@@ -207,71 +207,102 @@
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
-	<p class="title">Point, Point, Draw Line<br>
-	Point, Point, Draw Line, End.</p>
+	<p class="title">Parsing<br>Based on <em>Flags</em></p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_full">
+	<img src="images/postscript.png"/>
+	<p class="title">Loop<br>and write to File</em></p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_bottom">
+	<img src="images/points_gis.png"/>
+	<p class="title">Extracted Points</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
 	<p class="title">Georeferencing<br>
-	The "Gotcha!"</p>
+	<em>'Gotcha!'</em></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Must Know Projection<br>WGS 84</p>
+	<img src="images/ai_screeny.png"/>
+	<p class="title">Point Translation<br>and Conversion</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide">
+	<img src="images/control_1.png"/>
+	<p class="title">In Postscript<br></p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_bottom">
+	<img src="images/control_points_aerial.png"/>
+	<p class="title">Set Ground Control<br></p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide">
+	<img src="images/georef_1.png"/>
+	<p class="title">Conversion Factor &<br>Projection (WGS84?)</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Set Ground Control Points<br>Lower Left<br>Upper Right</p>
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">One more Gotcha<br>No Curves :(<br>Convert to Lines</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Algorithm will calculate coordinates</p>
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">Other Needs</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+<div class="slide">
+	<img src="images/formatted.png"/>
+	<p class="title">Format Created Text Files (CSV)</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Parse the File</p>
+	<img src="images/arcpy.jpg"/>
+	<p class="title">File Conversion<br>ArcPy</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Loop<br>Looking for Key Signals</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Use Conversion Tools</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide image_full">
-	<img src="images/postscript.png"/>
+	<img src="images/arcgis_screeny.png"/>
 	<p class="title">Open and Sort in ArcGIS</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
-<div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Future Works</p>
+<div class="slide">
+	<img src="images/arcgis_screeny.png"/>
+	<p class="title"></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/postscript.png"/>
-	<p class="title">Join Me!<br>GITHUB LINK</p>
+	<img src="images/lake_calhoun_screen.png"/>
+	<p class="title">Attributes</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
+
+<div class="slide image_full">
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">It works!<br>Graphically Created GeoData</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
+
+
 
 
 
