more prezi updates

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -114,20 +114,20 @@
 <body>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src=""/>
 	<p class="title">Design to Data<br>
 	<a>Adobe Illustrator<br>Data Extraction</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src=""/>
 	<p class="title">Geospatial Data Design</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src=""/>
 	<p class="title">Not in GIS</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
@@ -302,9 +302,30 @@
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
+<div class="slide image_full">
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">Landscape Architects<br>
+	Graphic Designers<br>
+	Non-GIS Users</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
 
+<div class="slide image_full">
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">Future Work<br>
+	PyQGIS<br>
+	SVG/Inkscape</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
 
-
+<div class="slide image_full">
+	<img src="images/arcgis_screeny.png"/>
+	<p>Mike Foster<br>
+	Twitter: <a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>
+	Email: <a href="mailto:mjfoster@mit.edu?Subject=NACIS2014" target="_top">mjfoster@mit.edu</a><br><br>
+	Project Github Repo:<br><a target="_blank" href="http://www.github.com/mjfoster83">www.github.com/mjfoster83/ai-extractor</a></p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
 
 <script>
 	// The following is mostly derived from https://github.com/tmcw/big
