updated DUSP stuff

--- a/nacis-2014/index.html
+++ b/nacis-2014/index.html
@@ -114,37 +114,40 @@
 <body>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src=""/>
 	<p class="title">Design to Data<br>
 	<a>Adobe Illustrator<br>Data Extraction</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src="images/calhoun_1.jpg"/>
 	<p class="title">Geospatial Data Design</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<img src="images/chugiak_alaska1.png"/>
+	<img src="images/calhoun_1.jpg"/>
 	<p class="title">Not in GIS</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
-	<p>Hi!<br>Mike Foster, GISP<br><em>GIS/Data Viz Specialist</em><br>DUSPMIT/FHGeographics<br>
+	<img src="images/matatu-animation.bmp"/>
+	<p>Mike Foster, GISP<br>MIT Urban Studies and Planning<br>Civic Data Design Lab<br>FHGeographics<br>
 	<a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>Follow Along:<br><a target="_blank" href="http://www.github.com/mjfoster83">mjfoster83.github.io/nacis-2014</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
-<div class="slide image_full">
-	<p>DUSPMIT<br>Civic Data Design Lab<br>
-	<a target="_blank" href="http://www.twitter.com/mjfoster83">www.civicdatadesignlab.org</a></p>
+<div class="slide">
+	<img src="images/powermap.jpg"/>
+	<p>DUSPMIT<br><a target="_blank" href="http://dusp.mit.edu">dusp.mit.edu</a><br><br><br><br>
+	<a target="_blank" href="http://www.civicdatadesignlab.org">www.civicdatadesignlab.org</a></p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
+	<img src="images/matatu.png"/>
 	<p>DUSPMIT<br>Digital Matatus<br>City Digits<br>Data Action Blog</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
@@ -283,9 +286,9 @@
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
-<div class="slide image_full">
+<div class="slide">
 	<img src="images/arcpy.jpg"/>
-	<p class="title">File Conversion<br>ArcPy</p>
+	<p class="title"><br>File Conversion<br><br><br>ArcPy</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
@@ -315,13 +318,28 @@
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
-	<p class="title">GDAL</p>
+	<p class="title">Landscape Architects<br>
+	Graphic Designers<br>
+	Non-GIS Users</p>
 	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
 </div>
 
+<div class="slide image_full">
+	<img src="images/calhoun_1.jpg"/>
+	<p class="title">Future Work<br>
+	PyQGIS<br>GDAL<br>
+	SVG/Inkscape</p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
 
-
-
+<div class="slide image_full">
+	<img src="images/matatu-animation.bmp"/>
+	<p>Mike Foster<br>
+	Twitter: <a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>
+	Email: <a href="mailto:mjfoster@mit.edu?Subject=NACIS2014" target="_top">mjfoster@mit.edu</a><br><br>
+	Project Github Repo:<br><a target="_blank" href="http://www.github.com/mjfoster83">www.github.com/mjfoster83/ai-extractor</a></p>
+	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+</div>
 
 <script>
 	// The following is mostly derived from https://github.com/tmcw/big
