last minute prezi

--- a/nacis-2014/index.html
+++ b/nacis-2014/index.html
@@ -91,7 +91,7 @@
 		}
 
 		a{
-			color: #e4f363;
+			color: #f16022;
 			text-decoration: none;
 		}
 
@@ -117,203 +117,204 @@
 	<img src=""/>
 	<p class="title">Design to Data<br>
 	<a>Adobe Illustrator<br>Data Extraction</a></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">Geospatial Data Design</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">Not in GIS</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/matatu-animation.bmp"/>
-	<p>Mike Foster, GISP<br>MIT Urban Studies and Planning<br>Civic Data Design Lab<br>FHGeographics<br>
-	<a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>Follow Along:<br><a target="_blank" href="http://www.github.com/mjfoster83">mjfoster83.github.io/nacis-2014</a></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<p>Mike Foster, GISP<br>MIT Urban Studies and Planning<br>Civic Data Design Lab<br>
+	<a target="_blank" href="http://www.fhgeographics.com">FH GeoGraphics</a><br>
+	<a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>Follow Along:<br><a target="_blank" href="http://mjfoster83.github.io/nacis-2014">mjfoster83.github.io/nacis-2014</a></p>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
-	<img src="images/powermap.jpg"/>
-	<p>DUSPMIT<br><a target="_blank" href="http://dusp.mit.edu">dusp.mit.edu</a><br><br><br><br>
+	<p><br>DUSPMIT<br><a target="_blank" href="http://dusp.mit.edu">dusp.mit.edu</a><br><br><br>
+	<a target="_blank" href="http://duspviz.mit.edu"><img src="images/duspviz.png"/></a>
 	<a target="_blank" href="http://www.civicdatadesignlab.org">www.civicdatadesignlab.org</a></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/matatu.png"/>
 	<p>DUSPMIT<br>Digital Matatus<br>City Digits<br>Data Action Blog</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/oilWater.png"/>
 	<p class="title">Graphic Design and Geographic Data</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide image_full">
-	<img src="images/bridge.jpg"/>
-	<p class="title">The Project</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide">
-	<p class="title">Exploring Interoperability between Graphics Software and GIS Software</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide">
-	<p class="title">Methods of Interoperability</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
-</div>
-
-<div class="slide image_bottom">
-	<img src="images/mapublisher.jpg"/>
-	<p class="title">Mapublisher<br>AutoCAD<br>Georeferencing</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/dead_end_large.gif"/>
 	<p class="title">The Background...<br>
 	and Motivation</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
+</div>
+
+<div class="slide">
+	<p class="title">Exploring Interoperability between Graphics Software and GIS Software</p>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
+</div>
+
+<div class="slide">
+	<p class="title">Methods of Interoperability</p>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_bottom">
+	<img src="images/mapublisher.jpg"/>
+	<p class="title">Mapublisher<br>AutoCAD<br>Georeferencing</p>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
+</div>
+
+<div class="slide image_full">
+	<img src="images/bridge.jpg"/>
+	<p class="title">The Project</p>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
 	<p class="title">Reverse Engineer the ArcGIS<br>
 	Export to AI<br>
 	functionality</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">The Result...<br><br>
 	<a>Python Based</a> Data Extraction/<br>Conversion Tool</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">The Process...</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/ai_screeny.png"/>
 	<p class="title">What is in an AI file?</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
 	<p class="title"><a>Glorified</a><br>Postscript</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
 	<p class="title">Parsing<br>Based on <em>Flags</em></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
 	<p class="title">Loop<br>and write to File</em></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_bottom">
 	<img src="images/points_gis.png"/>
 	<p class="title">Extracted Points</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/postscript.png"/>
 	<p class="title">Georeferencing<br>
 	<em>'Gotcha!'</em></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/ai_screeny.png"/>
 	<p class="title">Point Translation<br>and Conversion</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
 	<img src="images/control_1.png"/>
 	<p class="title">In Postscript<br></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_bottom">
 	<img src="images/control_points_aerial.png"/>
 	<p class="title">Set Ground Control<br></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
 	<img src="images/georef_1.png"/>
 	<p class="title">Conversion Factor &<br>Projection (WGS84?)</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">One more Gotcha<br>No Curves :(<br>Convert to Lines</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">Other Needs</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
 	<img src="images/formatted.png"/>
 	<p class="title">Format Created Text Files (CSV)</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
 	<img src="images/arcpy.jpg"/>
 	<p class="title"><br>File Conversion<br><br><br>ArcPy</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/arcgis_screeny.png"/>
 	<p class="title">Open and Sort in ArcGIS</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide">
 	<img src="images/arcgis_screeny.png"/>
 	<p class="title"></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/lake_calhoun_screen.png"/>
 	<p class="title">Attributes</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/calhoun_1.jpg"/>
 	<p class="title">It works!<br>Graphically Created GeoData</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
@@ -321,7 +322,7 @@
 	<p class="title">Landscape Architects<br>
 	Graphic Designers<br>
 	Non-GIS Users</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
@@ -329,16 +330,17 @@
 	<p class="title">Future Work<br>
 	PyQGIS<br>GDAL<br>
 	SVG/Inkscape</p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <div class="slide image_full">
 	<img src="images/matatu-animation.bmp"/>
 	<p>Mike Foster<br>
 	Twitter: <a target="_blank" href="http://www.twitter.com/mjfoster83">@mjfoster83</a><br>
-	Email: <a href="mailto:mjfoster@mit.edu?Subject=NACIS2014" target="_top">mjfoster@mit.edu</a><br><br>
+	Email: <a href="mailto:mjfoster@mit.edu?Subject=NACIS2014" target="_top">mjfoster@mit.edu</a><br>
+	<a href="http://www.graphicarto.com" target="_top">www.graphicarto.com</a><br>
 	Project Github Repo:<br><a target="_blank" href="http://www.github.com/mjfoster83">www.github.com/mjfoster83/ai-extractor</a></p>
-	<a class="citation" href="http://github.com/maptimeboston">M. Foster, 2014</a>
+	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
 <script>
