--- a/nacis-2014/index.html
+++ b/nacis-2014/index.html
@@ -149,7 +149,10 @@
 
 <div class="slide image_full">
 	<img src="images/matatu.png"/>
-	<p>DUSPMIT<br>Digital Matatus<br>City Digits<br>Data Action Blog</p>
+	<p><a target="_blank" href="http://www.rebuildbydesign.org">Rebuild by Design</a><br>
+	<a target="_blank" href="http://www.digitalmatatus.com">Digital Matatus</a><br>
+	<a target="_blank" href="http://citydigits.org/">City Digits</a><br>
+	Data Action Blog (Coming Soon)</p>
 	<a class="citation" href="http://github.com/mjfoster83">M. Foster, 2014</a>
 </div>
 
